feat(barometer): refactor BarometerEngineService for better performance and clean code